# hydra

./: .gitignore  Cargo.toml
crates/asset/: Cargo.toml
crates/asset/src/: asset.rs  ext.rs  lib.rs  plugin.rs  settings.rs
crates/asset/src/config/: importer.rs  mod.rs  processor.rs  registry.rs
crates/asset/src/database/: commands.rs  import.rs  library.rs  load.rs  mod.rs  scanner.rs  state.rs
crates/asset/src/database/config/: cache.rs  importer.rs  mod.rs  registry.rs  sources.rs
crates/asset/src/io/: cache.rs  embedded.rs  local.rs  mod.rs  path.rs  source.rs  vfs.rs
crates/assets/: Cargo.toml
crates/assets/src/: asset.rs  events.rs  lib.rs  library.rs  plugin.rs
crates/assets/src/config/: importer.rs  mod.rs  processor.rs  registry.rs
crates/assets/src/database/: commands.rs  events.rs  import.rs  load.rs  mod.rs  state.rs
crates/assets/src/io/: cache.rs  embedded.rs  local.rs  mod.rs  source.rs  vfs.rs
crates/ecs/: Cargo.toml
crates/ecs/src/: app.rs  lib.rs
crates/ecs/src/app/: defaults.rs  mod.rs  plugin.rs  sync.rs  time.rs
crates/ecs/src/commands/: entity.rs  mod.rs
crates/ecs/src/core/: bitset.rs  blob.rs  dag.rs  ext.rs  frame.rs  identify.rs  mod.rs  sparse.rs  task.rs
crates/ecs/src/hierarchy/: mod.rs  spawner.rs
crates/ecs/src/spawner/: hierarchy.rs  mod.rs
crates/ecs/src/system/: arg.rs  commands.rs  config.rs  mod.rs  query.rs  query_v2.rs  schedule.rs  set.rs
crates/ecs/src/system/commands/: mod.rs  spawner.rs
crates/ecs/src/system/executor/: mod.rs  parallel.rs  sequential.rs
crates/ecs/src/world/: access.rs  cell.rs  command.rs  component.rs  entity.rs  event.rs  hierarchy.rs  mod.rs  mode.rs  resource.rs
crates/ecs/src/world/archetype/: mod.rs  table.rs
crates/encase/: Cargo.toml
crates/encase/src/: lib.rs
crates/gilrs/: Cargo.toml
crates/gilrs/src/: lib.rs  translate.rs
crates/input/: Cargo.toml
crates/input/src/: analog.rs  button.rs  gamepad.rs  inputs.rs  keyboard.rs  lib.rs  mouse.rs  plugin.rs  touch.rs
crates/macros/derive-asset/: Cargo.toml
crates/macros/derive-asset/src/: expand.rs  lib.rs
crates/macros/derive-ecs/: Cargo.toml
crates/macros/derive-ecs/src/: component.rs  event.rs  kit.rs  lib.rs  mode.rs  phase.rs  plugin.rs  resource.rs  tag.rs
crates/macros/derive-encase/: Cargo.toml
crates/macros/derive-encase/src/: lib.rs
crates/macros/derive-input/: Cargo.toml
crates/macros/derive-input/src/: expand.rs  lib.rs
crates/macros/derive-reflect/: Cargo.toml
crates/macros/derive-render/: Cargo.toml
crates/macros/utils/: Cargo.toml
crates/macros/variadics/: Cargo.toml
crates/math/: Cargo.toml
crates/math/src/: lib.rs  size.rs
crates/reflection/: Cargo.toml
crates/reflection/src/: lib.rs
crates/render/: Cargo.toml
crates/render-2d/: Cargo.toml
crates/render-3d/: Cargo.toml
crates/render-3d/src/: lib.rs
crates/render/src/: app.rs  constants.rs  device.rs  lib.rs  phases.rs  plugin.rs  plugins.rs  surface.rs
crates/render/src/embedded/shaders/: culling.wgsl
crates/render/src/plugins/: camera.rs  mesh.rs  mod.rs  texture.rs
crates/render/src/primitives/: aabb.rs  color.rs  mod.rs  viewport.rs
crates/render/src/renderer/: camera.rs  draw.rs  encoder.rs  graph.rs  graph_v2.rs  mod.rs  renderer.rs  state.rs
crates/render/src/renderer/draw/: cpu.rs  drawable.rs  gpu.rs  material.rs  mod.rs  model.rs  pass.rs  surface.rs  view.rs
crates/render/src/renderer/v2/: mod.rs
crates/render/src/resources/: binding.rs  extract.rs  mod.rs  shader.rs
crates/render/src/resources/buffer/: array.rs  index.rs  mod.rs  storage.rs  uniform.rs  vertex.rs
crates/render/src/resources/material/: mod.rs
crates/render/src/resources/mesh/: allocator.rs  mod.rs
crates/render/src/resources/pipeline/: cache.rs  mod.rs
crates/render/src/resources/shader/: mod.rs  processor.rs
crates/render/src/resources/texture/: fallbacks.rs  mod.rs  render.rs  sampler.rs
crates/render/src/types/: color.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs  plugin.rs
crates/renderer/src/core/: device.rs  mod.rs  surface.rs
crates/renderer/src/renderer/: camera.rs  graph.rs
crates/renderer/src/renderer/graph/: allocator.rs  compiler.rs  mod.rs
crates/renderer/src/resources/: binding.rs  buffer.rs  extract.rs  id.rs  mod.rs  shader.rs  texture.rs
crates/renderer/src/resources/mesh/: allocator.rs  mod.rs
crates/renderer/src/resources/pipeline/: cache.rs  mod.rs
crates/renderer/src/types/: color.rs  mod.rs  viewport.rs
crates/transform/: Cargo.toml
crates/transform/src/: lib.rs  plugin.rs
crates/window/: Cargo.toml
crates/window/src/: app.rs  events.rs  lib.rs  plugin.rs  translate.rs  window.rs  winit.rs
examples/render/: Cargo.toml
examples/render/src/: culling.wgsl  draw-light.frag.wgsl  draw-light.vert.wgsl  frag.wgsl  frag2.wgsl  main.rs  plugin.rs  vert.wgsl  vert2.wgsl
examples/render/src/shaders/: common.wgsl  culling.wgsl  depth-pass.wgsl  draw-mesh.wgsl  draw-sprite.wgsl  forward-lighting.wgsl  unlit-color.wgsl  unlit-texture.wgsl
examples/window/: Cargo.toml
examples/window/src/: main.rs
(+22 files in other folders)
