[package]
name = "hydra-engine"
version = "0.0.0"
edition = "2024"
authors = ["eddie_0226@outlook.com"]
description = "A ecs powered multi threaded game engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Eddieg26/hydra"

[workspace]
members = ["crates/*", "examples/ecs/*"]

[workspace.dependencies]
fixedbitset = "0.5.7"
indexmap = "2.8.0"
uuid = "1.16.0"
serde = "1.0.219"
ron = "0.10.1"
futures = "0.3.31"
smol = "2.0.2"
downcast-rs = "2.0.1"
thiserror = "2.0.12"