[package]
name = "asset"
version = "0.1.0"
edition = "2024"

[dependencies]
ecs = { path = "../ecs" }
uuid = { workspace = true, features = ["v4", "v5"] }
serde = { workspace = true, features = ["derive"] }
ron = { workspace = true }
futures = { workspace = true }
smol = { workspace = true }
downcast-rs = { workspace = true }
thiserror = { workspace = true }
bincode = { version = "2.0.1", features = ["serde"] }
derive-asset = { path = "../macros/derive-asset" }
blake3 = "1.8.2"
crc32fast = "1.2.0"
