[package]
name = "render"
version = "0.1.0"
edition = "2024"

[dependencies]
ecs = { path = "../ecs" }
asset = { path = "../asset" }
math = { path = "../math" }
window = { path = "../window" }
transform = { path = "../transform" }
derive-render = { path = "../macros/derive-render" }
bytemuck = { workspace = true, features = ["derive"] }
bitflags = { workspace = true }
smol = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
downcast-rs = { workspace = true }
wgpu = { workspace = true, features = ["spirv", "glsl", "serde"] }
encase = { version = "0.10.0", features = ["glam"] }
tobj = "4.0.3"
waker-fn = "1.2.0"
