[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
asset = { path = "../asset" }
ecs = { path = "../ecs" }
math = { path = "../math" }
transform = { path = "../transform" }
window = { path = "../window" }
bytemuck = { workspace = true }
wgpu = { workspace = true }
encase = { version = "0.10.0", features = ["glam"] }
wgsl-macro = "0.4.0"