[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
asset = { path = "../asset" }
ecs = { path = "../ecs" }
math = { path = "../math" }
transform = { path = "../transform" }
window = { path = "../window" }
encase = { version = "0.10.0", features = ["glam"] }
bitflags = { workspace = true }
bytemuck = { workspace = true }
wgpu = { workspace = true }
serde = { workspace = true }
smol = { workspace = true }
wgsl-macro = "0.4.0"