[package]
name = "render-example"
version = "0.1.0"
edition = "2024"

[dependencies]
ecs = { path = "../../crates/ecs" }
asset = { path = "../../crates/asset" }
math = { path = "../../crates/math" }
transform = { path = "../../crates/transform" }
render = { path = "../../crates/render" }
window = { path = "../../crates/window" }
uuid = { workspace = true, features = ["v4"] }
bytemuck = { workspace = true }
